--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="assets/sass/app.css">
 </head>
 <body>
+    <a href="websiteOne/">Website  One</a>
+    <a href="websiteTwo/">Website Two</a>
+</body>
+</html>
+
