--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="assets/sass/app.css">
 </head>
 <body>
-    <a href="websiteOne/">Website  One</a>
-    <a href="websiteTwo/">Website Two</a>
+    <a href="websiteOne">Website  One</a>
+    <a href="websiteTwo">Website Two</a>
 </body>
 </html>
 
